# kuka_operation

./: README.md
ati_iface/: CMakeLists.txt  README.md  package.xml
ati_iface/src/: CMakeLists.txt  ati_iface-component.cpp  ati_iface-component.hpp
force_trigger/: CMakeLists.txt  package.xml
force_trigger/src/: CMakeLists.txt  force_trigger-component.cpp  force_trigger-component.hpp
gui_connector/: CMakeLists.txt  package.xml
gui_connector/src/: CMakeLists.txt  gui_connector-component.cpp  gui_connector-component.hpp
kuka-robot-hardware/: README.md
kuka-robot-hardware/lwr_fri/: CMakeLists.txt  lwr_fri-gnulinux.pc  package.xml  runfri.ops
kuka-robot-hardware/lwr_fri/src/: CMakeLists.txt  FRIComponent.hpp  FRIComponentSim.cpp  FRIComponentSim.hpp  Makefile
kuka-robot-hardware/lwr_fri_msgs/: CMakeLists.txt  mainpage.dox  package.xml
kuka-robot-hardware/rtt_lwr_fri_msgs/: CMakeLists.txt  package.xml
kuka_lwr_description/: CMakeLists.txt  mainpage.dox  manifest.xml
kuka_lwr_description/launch/: bayer_double_iiwa_rviz.launch  bayer_iiwa.rviz
kuka_lwr_description/meshes/arm/convex/: a_with_force_sensor.stl  b_with_force_sensor.stl
kuka_lwr_description/meshes/sdh/convex/: finger_convex.iv  knuckle.xml  knuckle_convex.stlb
pose_probe_visualization/: CMakeLists.txt  package.xml
pose_probe_visualization/src/: marker_pub.py
probe_a_scan/: CMakeLists.txt  README.md  package.xml  run.sh
probe_a_scan/configuration/: Application_properties.lua  AtiIface_properties.lua  SoemMasterComponent_properties.lua  buttons_gui_spec.xml  check_roscore.py
probe_a_scan/launch/: load_setup_lwr_a_mode.launch
probe_a_scan/poses/: probe_poses.json
probe_a_scan/reports/: read_report.py
probe_a_scan/robot_description/urdf/franka_panda/: use_case_setup_panda.urdf.xacro
probe_a_scan/robot_description/urdf/kinova/: use_case_setup_gen3.urdf.xacro
probe_a_scan/robot_description/urdf/lwr/: kuka_a_mode.urdf  kuka_b_mode.urdf  use_case_setup_lwr.urdf
probe_a_scan/robot_description/urdf/ur10/: robot_tools.urdf.xacro  use_case_setup_ur10.urdf  use_case_setup_ur10.urdf.xacro
probe_a_scan/scripts/components/: fsm_component.lua  probe_pos_manager.lua
probe_a_scan/scripts/config/: lwr.cpf
probe_a_scan/scripts/deploy/: a_mode_deploy.lua  deploy.ops  my_deploy.lua  test_ati.lua
probe_a_scan/scripts/etasl/: default_ports.lua  move_admittance.lua  move_cartesian_frame.lua  move_cartesian_frame_absolute.lua  move_cartesian_frame_force_guarded.lua  move_jointspace_trap.lua  move_learned_model.lua  move_line.lua  move_spline.lua
probe_a_scan/scripts/etasl/motion_models/: line.csv
probe_a_scan/scripts/etasl/robot_def/: lwr_etasl.lua
probe_a_scan/scripts/lib/: etasl_FT_ATI.lua  etasl_lwr.lua
probe_a_scan/scripts/rfsm/: a_mode_fsm.lua  a_mode_fsm_extra.lua  my_fsm.lua  my_fsm_extra.lua
python_gui/scripts/: gui_sender.py
rtt_soem/soem_master/: soem_master_component.cpp  test.ops
