<package>
  <name>ati_iface</name>
  <version>1.0.0</version>
  <description>This package contains the components of the ati_iface package</description>
  <maintainer email="jef.desmet@kuleuven.be">Jef De Smet</maintainer>

  <license>Unknown</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jef De Smet</author>

  <build_depend>rtt</build_depend>
  <build_depend>orogen</build_depend>
  <run_depend>rtt</run_depend>

  <!-- optionally: add dependencies -->
  <build_depend>soem_beckhoff_drivers</build_depend>
  <run_depend>soem_beckhoff_drivers</run_depend>


  <export>

  </export>
</package>
