<package>
  <name>lwr_fri</name>
  <version>1.0.0</version>
  <description>This package contains the components of the lwr_fri package</description>
  <maintainer email="unknown@maintainer.com">Unknown Author</maintainer>

  <license>Unknown</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Unknown Author</author>

  <build_depend>rtt</build_depend>
  <build_depend>orogen</build_depend>
  <build_depend>rtt_motion_control_msgs</build_depend>
  <build_depend>rtt_lwr_fri_msgs</build_depend>
<!--   <build_depend>kuka_lwr_fri</build_depend> -->
  <build_depend>orocos_kdl</build_depend>
  <build_depend>rtt_geometry_msgs</build_depend>
  <build_depend>rtt_sensor_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  
  <run_depend>rtt</run_depend>

  <export>

  </export>
</package>
